# baxter-vr-unity

./: .gitignore  README.md
baxter_vr_unity/: .gitignore  Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  ROSNode.exe.txt  Robotic Telepresence.CSharp.Editor.csproj  Robotic Telepresence.CSharp.csproj  Robotic Telepresence.Editor.Plugins.csproj  Robotic Telepresence.Editor.csproj  Robotic Telepresence.Plugins.csproj  Robotic Telepresence.csproj
baxter_vr_unity/Assets/: OverrideControllerTexture.cs  ReportLocation.cs  TestTarget.mat  toggleDisable.cs
baxter_vr_unity/Assets/Editor/: EditorShortCutKeys.cs  urdfPostProcessor.cs
baxter_vr_unity/Assets/OCULUS MODELS/: OCULUS.3DS  OCULUS.mtl  Oculus Rift.max  dk2_hmd.mtl
baxter_vr_unity/Assets/Prefabs/: Cylinder.prefab  Hand.prefab  SavedMeshes.prefab  baxter.prefab  left_gripper_base.prefab  mesh1.asset  mesh2.asset  mesh3.asset  mesh4.asset  mesh5.asset  (+1 more)
baxter_vr_unity/Kinect/: Kinect.vcxproj
baxter_vr_unity/ProjectSettings/: InputManager.asset  NavMeshProjectSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
ros_ws/src/robotic_telepresence/: CMakeLists.txt  package.xml
ros_ws/src/robotic_telepresence/launch/: server.launch
ros_ws/src/robotic_telepresence/src/: grippers.py  kinect_sampler.cpp  moveit.py  translate_requests.py
rosnode_windows/: .gitignore  FileMapping.cpp  FileMapping.h  Joint.cpp  Joint.h  ROSnode.cpp  ROSnode.sln  ROSnode.vcxproj  ROSnode.vcxproj.filters  ROSserial.cpp  ROSserial.h
(+68 files in other folders)
